# python-mois-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  WSL_KRADDR_GEO_DEBUG_UI.md  antigravity.json  claude.json  codex.json  mois-api.md  pyproject.toml
.codex/: config.toml
.gemini/: mcp.json
apps/db_browser/backend/: load_postgis.py
docs/: api-list.md  database.md  db-browser.md  db-structure.md  decisions.md  file-downloads.md  incremental-openapi.md  integration-with-kraddr-geo.md  postgresql-postgis-history.md  repeated-mistakes.md  response-fields.md  sqlite-spatialite-migration-report.md  testing.md  tourism-license-data.md  travel-planner-architecture.md  troubleshooting.md  types-and-coordinates.md
pymois/: __init__.py  _http.py  catalog.py  catalogs.py  client.py  convert.py  coords.py  db.py  exceptions.py  files.py  models.py
src/apps/: __init__.py
src/apps/db_browser/: __init__.py
src/apps/db_browser/backend/: __init__.py  __main__.py  app.py  load_postgis.py  load_sqlite.py
src/apps/db_browser/frontend/: package-lock.json  package.json
src/apps/db_browser/frontend/src/: App.jsx  index.css
src/mois/: __init__.py  _http.py  catalog.py  client.py  convert.py  coords.py  db.py  exceptions.py  files.py  geocoding.py  models.py  parser.py  rustfs.py
tests/: test_all_license_downloads_db.py  test_async_clients.py  test_catalogs.py  test_client.py  test_convert.py  test_coordinates.py  test_db.py  test_db_browser_backend.py  test_files.py  test_geocoding.py  test_live_openapi.py  test_no_kraddr_base.py  test_rustfs.py
tools/: generate_docs.py  load_all_localdata_to_postgis.py  load_all_localdata_to_sqlite.py  probe_life_convenience.py
