[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mois-api"
version = "0.1.0"
description = "Python client for Korean MOIS local license OpenAPI and localdata file downloads."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "digitie" }
]
keywords = ["mois", "korea", "localdata", "data.go.kr", "license"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "GeoAlchemy2>=0.15",
  "pydantic>=2.7",
  "psycopg[binary]>=3.1",
  "requests>=2.31",
  "pyproj>=3.6",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "responses>=0.25",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-requests>=2.31",
]
web = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mois*"]

[tool.setuptools.package-data]
mois = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "live: real network tests that require MOIS_SERVICE_KEY",
]
