[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-mois-api"
version = "0.1.0"
description = "행정안전부 지방행정 인허가정보 OpenAPI와 localdata 파일 다운로드용 Python 클라이언트."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "digitie" }
]
keywords = ["mois", "korea", "localdata", "data.go.kr", "license"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28",
  "pydantic>=2.7",
  "pyproj>=3.6",
  "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
web = [
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mois*"]

[tool.setuptools.package-data]
mois = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PIE", "C4", "PT", "RET", "RSE", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages/mois-debug-ui/tests"]
pythonpath = ["src", "packages/mois-debug-ui/src"]
addopts = "-ra"
markers = [
  "live: DATA_GO_KR_SERVICE_KEY가 필요한 실제 네트워크 호출 테스트",
]
